tests/errors/multiple_type_errors.dang
# Test multiple type errors in one file
let bad_addition = "hello" + 42
let missing_var = undefined_symbol
bad_arg: Int! = "string"
